<resources>
    <string name="app_name">ApPoint</string>

    <!--    General-->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>


    <!--    Main  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_appointments">My appointments</string>
    <string name="event">Event</string>
    <string name="events">Events</string>
    <string name="Report">Report contact or contamination</string>
    <string name="personal_reports">Personal reports</string>
    <string name="maps">Show map</string>

    <!--    Login / Register -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="date">Date</string>
    <string name="full_name">Full Name</string>
    <string name="birthday">Birthday</string>
    <string name="go_to_register">Already have an account? Register</string>
    <string name="go_to_login">Already have  an account? Login</string>

    <!--    Event -->
    <string name="add_event_button">Add event button</string>
    <string name="event_name">Event name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="type">Event Type</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="all_places">All available places</string>
    <string name="about_event">About Event</string>
    <string name="choose_a_time">Choose a date and a time</string>
    <string name="potential_risk_score">Potential risk score</string>
    <string name="estimated_surface">Estimated Surface</string>
    <string name="seats_number">Seats Number</string>
    <string name="open_space">Open Space</string>
    <string name="hh_mm">Event duration (hh:mm)</string>
    <string name="score">Score</string>
    <string name="event_type">Event type</string>
    <string name="available_area_for_each_person">Available area for each person</string>
    <string name="average_time_spent">Average Time Spent</string>
    <string name="event_duration">Event duration</string>
    <string name="user_name">User Name</string>
    <string name="swipe_up_for_event_details_n_swipe_down_for_appointments_list">Swipe up on the above cards for event details.<br /> Swipe down for appointments list</string>
    <string name="tap_on_this_button_to_create_a_new_entry">Tap on this button to create a new entry</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="more_info">More info</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="date_saved">Date saved</string>
    <string name="personal_risk_score">Personal risk score</string>
    <string name="upload_vaccination_certificate_picture">Upload vaccination certificate picture</string>
    <string name="take_a_new_picture">Take a new picture</string>
    <string name="upload_from_device">Upload from device</string>
    <string name="save_changes">Save changes</string>
    <string name="status">Status</string>

    <string-array name="event_types">
        <item>Dining</item>
        <item>Hiking</item>
        <item>Picnic</item>
        <item>Pool party</item>
        <item>Beach party</item>
        <item>Kids playdate</item>
        <item>Salon visit</item>
        <item>Dentist office visit</item>
        <item>Outside drinking</item>
        <item>Gym classes</item>
        <item>Blind date</item>
        <item>Indoors party</item>
        <item>Office meeting</item>
        <item>Science conference</item>
        <item>Sports Competition</item>
        <item>Pub</item>
        <item>Clubbing</item>
        <item>Festival</item>
    </string-array>

</resources>