<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_business"
    android:orientation="horizontal"
    android:paddingStart="@dimen/card_padding_start_end"
    android:paddingEnd="@dimen/card_padding_start_end"
    android:paddingTop="@dimen/card_padding_top_bottom"
    android:paddingBottom="@dimen/card_padding_top_bottom"
    android:background="@drawable/round_square_button"
    >

    <TextView
        android:id="@+id/tv_business_card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/card_padding_start_end">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <TextView
            android:id="@+id/tv_business_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <TextView
            android:id="@+id/tv_business_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />
    </LinearLayout>

</LinearLayout>