<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_event"
    android:orientation="horizontal"
    android:paddingStart="@dimen/card_padding_start_end"
    android:paddingEnd="@dimen/card_padding_start_end"
    android:paddingTop="@dimen/card_padding_top_bottom"
    android:paddingBottom="@dimen/card_padding_top_bottom"
    android:layout_margin="@dimen/card_margin"
    android:background="@drawable/place_card"
    >

    <TextView
        android:id="@+id/tv_place_card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp"
        android:textColor="@color/event_accent"
        android:textSize="@dimen/title_large_textSize"
        android:text="title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/card_padding_start_end">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/card_inside_padding"
            android:text="@string/address"
            android:textColor="@color/event_dark" />

        <TextView
            android:id="@+id/tv_event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/card_inside_padding"
            android:text="@string/type"
            android:textColor="@color/event_dark" />

        <TextView
            android:id="@+id/tv_event_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/card_inside_padding"
            android:text="@string/phone_number"
            android:textColor="@color/event_dark" />
    </LinearLayout>

</LinearLayout>