<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoActivity">

    <ImageView
        android:id="@+id/ellipse_5"
        android:layout_width="412dp"
        android:layout_height="382dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="444dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ellipse_5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_take_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/bg_upload_picture_button"
        android:backgroundTint="@null"
        android:drawableStart="@drawable/ic_baseline_camera_alt_24"
        android:drawablePadding="10dp"
        android:elegantTextHeight="true"
        android:includeFontPadding="true"
        android:outlineSpotShadowColor="@color/ellipse_blue"
        android:padding="10dp"
        android:text="@string/take_a_new_picture"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textSize="@dimen/title_extra_small_textSize"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/rg_dose_number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_upload_from_gallery" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_upload_from_gallery"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_upload_picture_button"
        android:backgroundTint="@null"
        android:drawableStart="@drawable/ic_baseline_file_upload_24"
        android:drawablePadding="10dp"
        android:elegantTextHeight="true"
        android:includeFontPadding="true"
        android:outlineSpotShadowColor="@color/ellipse_blue"
        android:padding="10dp"
        android:text="@string/upload_from_device"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textSize="@dimen/title_extra_small_textSize"
        app:layout_constraintBottom_toTopOf="@+id/iv_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rg_dose_number"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_5" />

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_upload_from_gallery"
        app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_floating_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_changes"
        android:textAlignment="viewEnd"
        android:textSize="12sp"
        android:visibility="gone"
        app:icon="@drawable/ic_baseline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/rg_dose_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btn_upload_from_gallery"
        app:layout_constraintEnd_toStartOf="@+id/btn_upload_from_gallery"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/btn_take_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_upload_from_gallery"
        android:visibility="gone"
        >
        <RadioButton
            android:id="@+id/rb_dose1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dose 1"
            android:layout_gravity="center"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_dose2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dose 2"
            android:layout_gravity="center"
            android:checked="false"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>